src/gramatica/BibtextGrammar.java
/* Generated By:JavaCC: Do not edit this line. BibtextGrammar.java */
package gramatica;

public class BibtextGrammar implements BibtextGrammarConstants {
  public static void main(String args []) throws ParseException
  {
    BibtextGrammar parser = new BibtextGrammar(System.in);
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.print("Enter an expression like \u005c"1+(2+3)*4;\u005c" :");
      try
      {
        switch (parser.one_line())
        {
          case 0 :
          System.out.println("OK.");
          break;
          case 1 :
          System.out.println("Goodbye.");
          break;
          default :
          break;
        }
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        break;
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  final public int one_line() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 56:
      symbol();
      jj_consume_token(RB);
    {if (true) return 0;}
      break;
    case RB:
      jj_consume_token(RB);
    {if (true) return 1;}
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void symbol() throws ParseException {
    jj_consume_token(56);
    e();
  }

  final public void e() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ARTICLE:
      jj_consume_token(ARTICLE);
      jj_consume_token(LB);
      jj_consume_token(ID);
      art();
      break;
    case BOOK:
      jj_consume_token(BOOK);
      jj_consume_token(LB);
      jj_consume_token(ID);
      book();
      break;
    case BOOKLET:
      jj_consume_token(BOOKLET);
      jj_consume_token(LB);
      jj_consume_token(ID);
      booklet();
      break;
    case CONFERENCE:
      jj_consume_token(CONFERENCE);
      jj_consume_token(LB);
      jj_consume_token(ID);
      conference();
      break;
    case INBOOK:
      jj_consume_token(INBOOK);
      jj_consume_token(LB);
      jj_consume_token(ID);
      inbook();
      break;
    case INCOLLECTION:
      jj_consume_token(INCOLLECTION);
      jj_consume_token(LB);
      jj_consume_token(ID);
      incollection();
      break;
    case INPROCEEDINGS:
      jj_consume_token(INPROCEEDINGS);
      jj_consume_token(LB);
      jj_consume_token(ID);
      inproceedings();
      break;
    case MANUAL:
      jj_consume_token(MANUAL);
      jj_consume_token(LB);
      jj_consume_token(ID);
      manual();
      break;
    case MASTERSTHESIS:
      jj_consume_token(MASTERSTHESIS);
      jj_consume_token(LB);
      jj_consume_token(ID);
      mastersthesis();
      break;
    case MISC:
      jj_consume_token(MISC);
      jj_consume_token(LB);
      jj_consume_token(ID);
      misc();
      break;
    case PHDTHESIS:
      jj_consume_token(PHDTHESIS);
      jj_consume_token(LB);
      jj_consume_token(ID);
      phdthesis();
      break;
    case PROCEEDINGS:
      jj_consume_token(PROCEEDINGS);
      jj_consume_token(LB);
      jj_consume_token(ID);
      proceedings();
      break;
    case TECHREPORT:
      jj_consume_token(TECHREPORT);
      jj_consume_token(LB);
      jj_consume_token(ID);
      techreport();
      break;
    case UNPUBLISHED:
      jj_consume_token(UNPUBLISHED);
      jj_consume_token(LB);
      jj_consume_token(ID);
      unpublished();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*
void a() :
{}
{
  < LB > < ID >
  (    art()
	)
}*/
  final public void number() throws ParseException {
    jj_consume_token(NUMBER);
    jj_consume_token(57);
    jj_consume_token(LB);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WORD:
      jj_consume_token(WORD);
      jj_consume_token(58);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(CONSTANT);
    jj_consume_token(RB);
  }

  final public void pages() throws ParseException {
    jj_consume_token(PAGES);
    jj_consume_token(57);
    jj_consume_token(LB);
    jj_consume_token(CONSTANT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 58:
      label_1:
      while (true) {
        jj_consume_token(58);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(CONSTANT);
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(RB);
  }

  final public void month() throws ParseException {
    jj_consume_token(MONTH);
    jj_consume_token(57);
    jj_consume_token(LB);
    jj_consume_token(WORD);
    jj_consume_token(RB);
  }

  final public void doi() throws ParseException {
    jj_consume_token(DOI);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
      case 59:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
        jj_consume_token(CONSTANT);
        break;
      case 59:
        jj_consume_token(59);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RB);
  }

  final public void note() throws ParseException {
    jj_consume_token(NOTE);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_3:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(RB);
  }

  final public void author() throws ParseException {
    jj_consume_token(AUTHOR);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_4:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 59:
      case 60:
      case 61:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 59:
          jj_consume_token(59);
          break;
        case 60:
          jj_consume_token(60);
          break;
        case 61:
          jj_consume_token(61);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(RB);
  }

  final public void title() throws ParseException {
    jj_consume_token(TITLE);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_5:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
      case 60:
      case 62:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 58:
          jj_consume_token(58);
          break;
        case 60:
          jj_consume_token(60);
          break;
        case 62:
          jj_consume_token(62);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
    }
    jj_consume_token(RB);
  }

  final public void journal() throws ParseException {
    jj_consume_token(JOURNAL);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        jj_consume_token(WORD);
        break;
      case JOURNAL:
        jj_consume_token(JOURNAL);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
      case 59:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 59:
          jj_consume_token(59);
          break;
        case 58:
          jj_consume_token(58);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case JOURNAL:
      case WORD:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
    }
    jj_consume_token(RB);
  }

  final public void year() throws ParseException {
    jj_consume_token(YEAR);
    jj_consume_token(57);
    jj_consume_token(LB);
    jj_consume_token(CONSTANT);
    jj_consume_token(RB);
  }

  final public void volume() throws ParseException {
    jj_consume_token(VOLUME);
    jj_consume_token(57);
    jj_consume_token(LB);
    jj_consume_token(CONSTANT);
    jj_consume_token(RB);
  }

  final public void editor() throws ParseException {
    jj_consume_token(EDITOR);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_7:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 59:
      case 60:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 59:
          jj_consume_token(59);
          break;
        case 60:
          jj_consume_token(60);
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_7;
      }
    }
    jj_consume_token(RB);
  }

  final public void publisher() throws ParseException {
    jj_consume_token(PUBLISHER);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_8:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        jj_consume_token(58);
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_8;
      }
    }
    jj_consume_token(RB);
  }

  final public void series() throws ParseException {
    jj_consume_token(SERIES);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        jj_consume_token(WORD);
        break;
      case 61:
        jj_consume_token(61);
        break;
      case CONSTANT:
        jj_consume_token(CONSTANT);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
      case CONSTANT:
      case 61:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_9;
      }
    }
    jj_consume_token(RB);
  }

  final public void address() throws ParseException {
    jj_consume_token(ADDRESS);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        jj_consume_token(WORD);
        break;
      case CONSTANT:
        jj_consume_token(CONSTANT);
        break;
      case 60:
        jj_consume_token(60);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
      case CONSTANT:
      case 60:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_10;
      }
    }
    jj_consume_token(RB);
  }

  final public void edition() throws ParseException {
    jj_consume_token(EDITION);
    jj_consume_token(57);
    jj_consume_token(LB);
    jj_consume_token(CONSTANT);
    jj_consume_token(RB);
  }

  final public void key() throws ParseException {
    jj_consume_token(KEY);
    jj_consume_token(57);
    jj_consume_token(LB);
    jj_consume_token(CONSTANT);
    jj_consume_token(RB);
  }

  final public void url() throws ParseException {
    jj_consume_token(URL);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        jj_consume_token(WORD);
        break;
      case CONSTANT:
        jj_consume_token(CONSTANT);
        break;
      case 63:
        jj_consume_token(63);
        break;
      case 62:
        jj_consume_token(62);
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
      case CONSTANT:
      case 62:
      case 63:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_11;
      }
    }
    jj_consume_token(RB);
  }

  final public void howpublished() throws ParseException {
    jj_consume_token(HOWPUBLISHED);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_12:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[29] = jj_gen;
        break label_12;
      }
    }
    jj_consume_token(RB);
  }

  final public void booktitle() throws ParseException {
    jj_consume_token(BOOKTITLE);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_13:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONFERENCE:
      case CONSTANT:
      case ID:
      case 58:
      case 60:
      case 62:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          jj_consume_token(ID);
          break;
        case 60:
          jj_consume_token(60);
          break;
        case 58:
          jj_consume_token(58);
          break;
        case 62:
          jj_consume_token(62);
          break;
        case CONSTANT:
          jj_consume_token(CONSTANT);
          break;
        case CONFERENCE:
          jj_consume_token(CONFERENCE);
          break;
        default:
          jj_la1[30] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[31] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_13;
      }
    }
    jj_consume_token(RB);
  }

  final public void organization() throws ParseException {
    jj_consume_token(ORGANIZATION);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_14:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 59:
      case 60:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 59:
          jj_consume_token(59);
          break;
        case 60:
          jj_consume_token(60);
          break;
        default:
          jj_la1[33] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[34] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_14;
      }
    }
    jj_consume_token(RB);
  }

  final public void chapter() throws ParseException {
    jj_consume_token(CHAPTER);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_15:
    while (true) {
      jj_consume_token(CONSTANT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        jj_consume_token(58);
        break;
      default:
        jj_la1[36] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
        ;
        break;
      default:
        jj_la1[37] = jj_gen;
        break label_15;
      }
    }
    jj_consume_token(RB);
  }

  final public void type() throws ParseException {
    jj_consume_token(TYPE);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_16:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[38] = jj_gen;
        break label_16;
      }
    }
    jj_consume_token(RB);
  }

  final public void school() throws ParseException {
    jj_consume_token(SCHOOL);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_17:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
      case 59:
      case 60:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 60:
          jj_consume_token(60);
          break;
        case 59:
          jj_consume_token(59);
          break;
        case 58:
          jj_consume_token(58);
          break;
        default:
          jj_la1[39] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[40] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[41] = jj_gen;
        break label_17;
      }
    }
    jj_consume_token(RB);
  }

  final public void institution() throws ParseException {
    jj_consume_token(INSTITUTION);
    jj_consume_token(57);
    jj_consume_token(LB);
    label_18:
    while (true) {
      jj_consume_token(WORD);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
      case 59:
      case 60:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 60:
          jj_consume_token(60);
          break;
        case 59:
          jj_consume_token(59);
          break;
        case 58:
          jj_consume_token(58);
          break;
        default:
          jj_la1[42] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[43] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORD:
        ;
        break;
      default:
        jj_la1[44] = jj_gen;
        break label_18;
      }
    }
    jj_consume_token(RB);
  }

  final public void art() throws ParseException {
    label_19:
    while (true) {
      jj_consume_token(60);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AUTHOR:
        author();
        break;
      case TITLE:
        title();
        break;
      case JOURNAL:
        journal();
        break;
      case YEAR:
        year();
        break;
      case VOLUME:
        volume();
        break;
      case NUMBER:
        number();
        break;
      case PAGES:
        pages();
        break;
      case MONTH:
        month();
        break;
      case DOI:
        doi();
        break;
      case NOTE:
        note();
        break;
      default:
        jj_la1[45] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 60:
        ;
        break;
      default:
        jj_la1[46] = jj_gen;
        break label_19;
      }
    }
  }

  final public void book() throws ParseException {
    label_20:
    while (true) {
      jj_consume_token(60);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AUTHOR:
        author();
        break;
      case EDITOR:
        editor();
        break;
      case TITLE:
        title();
        break;
      case PUBLISHER:
        publisher();
        break;
      case YEAR:
        year();
        break;
      case VOLUME:
        volume();
        break;
      case NUMBER:
        number();
        break;
      case SERIES:
        series();
        break;
      case ADDRESS:
        address();
        break;
      case EDITION:
        edition();
        break;
      case MONTH:
        month();
        break;
      case NOTE:
        note();
        break;
      case KEY:
        key();
        break;
      case URL:
        url();
        break;
      default:
        jj_la1[47] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 60:
        ;
        break;
      default:
        jj_la1[48] = jj_gen;
        break label_20;
      }
    }
  }

  final public void booklet() throws ParseException {
    label_21:
    while (true) {
      jj_consume_token(60);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TITLE:
        title();
        break;
      case AUTHOR:
        author();
        break;
      case HOWPUBLISHED:
        howpublished();
        break;
      case ADDRESS:
        address();
        break;
      case MONTH:
        month();
        break;
      case YEAR:
        year();
        break;
      case NOTE:
        note();
        break;
      case KEY:
        key();
        break;
      default:
        jj_la1[49] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 60:
        ;
        break;
      default:
        jj_la1[50] = jj_gen;
        break label_21;
      }
    }
  }

  final public void conference() throws ParseException {
    label_22:
    while (true) {
      jj_consume_token(60);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AUTHOR:
        author();
        break;
      case TITLE:
        title();
        break;
      case BOOKTITLE:
        booktitle();
        break;
      case YEAR:
        year();
        break;
      case EDITOR:
        editor();
        break;
      case VOLUME:
        volume();
        break;
      case NUMBER:
        number();
        break;
      case SERIES:
        series();
        break;
      case PAGES:
        pages();
        break;
      case ADDRESS:
        address();
        break;
      case MONTH:
        month();
        break;
      case ORGANIZATION:
        organization();
        break;
      case PUBLISHER:
        publisher();
        break;
      case NOTE:
        note();
        break;
      case KEY:
        key();
        break;
      default:
        jj_la1[51] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 60:
        ;
        break;
      default:
        jj_la1[52] = jj_gen;
        break label_22;
      }
    }
  }
